Fix depencency cycle in build https://bugs.webkit.org/show_bug.cgi?id=265870 rdar://119162443

Reviewed by Per Arne Vollan.

Swift code in WebKit extension targets (really any targets that are part of
the WebKit project and depend on WebKit.framework) cannot import
WebKit's swiftmodule without causing a cycle in the internal OS build.
This is because WebKit's Swift overlay builds in a separate project.

Fix by making WKProcessExtension.h a non-modular header, so that the
extension targets can bridge it without pulling in all of WebKit.

* Source/WebKit/Modules/OSX_Private.modulemap:
* Source/WebKit/Modules/iOS_Private.modulemap:
* Source/WebKit/Platform/ExtraPrivateSymbolsForTAPI.h:
* Source/WebKit/Shared/AuxiliaryProcessExtensions/AuxiliaryProcessExtensionBridge.h:
* Source/WebKit/WebKit.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/271568@main