Source/WebKit/Platform/ExtraPrivateSymbolsForTAPI.h
@@ -38,6 +38,14 @@ void GPUServiceInitializer();
 
 void ExtensionEventHandler(xpc_connection_t);
 
+// Declared in WKProcessExtension.h for use in extension targets. Must be declared in project
+//  headers because the extension targets cannot import the entire WebKit module (rdar://119162443).
+@interface WKGrant : NSObject
+@end
+
+@interface WKProcessExtension : NSObject
+@end
+
 #ifdef __cplusplus
 }
 #endif
